...
    ScreenPreviewContainer {
        MainProfileScreenPreviewContent(state = defaultMainProfilePreviewState)
    }
}

object MainProfileTestTags {
    const val LOGIN_BUTTON = "MainProfile_LoginButton"

    const val ACCOUNT_STATUS_TEXT = "MainProfile_AccountStatusText"
    const val AUTHORITY_LEVEL_TEXT = "MainProfile_AuthorityLevelText"
    const val PERMISSION_CODES_TEXT = "MainProfile_PermissionCodesText"

    const val USER_ID_TEXT = "MainProfile_UserIdText"
    const val TOTP_MAIN_BUTTON = "MainProfile_TotpMainButton"
    const val SESSIONS_BUTTON = "MainProfile_SessionsButton"
    const val IDENTIFIERS_BUTTON = "MainProfile_IdentifiersButton"
    const val DELETE_ACCOUNT_BUTTON = "MainProfile_DeleteAccountButton"
    const val LOGOUT_BUTTON = "MainProfile_LogoutButton"

    const val ACTION_ERROR_TEXT = "MainProfile_ActionErrorText"
    const val GLOBAL_ERROR_TEXT = "MainProfile_GlobalErrorText"
    const val REFRESH_BUTTON = "MainProfile_RefreshButton"
}

